feature(orders) make orders and orders steps

--- a/app/assets/stylesheets/application/base/helpers.css.scss
+++ b/app/assets/stylesheets/application/base/helpers.css.scss
@@ -41,6 +41,7 @@ ul.menu {
   &.btn-pink {
     background-color: $pink;
     color: $white;
+    text-align: center;
 
     &:hover {
       background-color: $darkPink;
