--- a/app/views/devise/registrations/_sign_up_form.html.haml
+++ b/app/views/devise/registrations/_sign_up_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form' }) do |f|
+= form_for(User.new, as: :user, url: registration_path(:user), html: { class: 'form' }) do |f|
   = devise_error_messages!
   = render 'devise/registrations/includes/main_fields', f: f
 
