--- a/app/views/shared/includes/_order_steps_header.html.haml
+++ b/app/views/shared/includes/_order_steps_header.html.haml
@@ -1,13 +1,16 @@
+- active_steps ||= ['cart']
+
 %ul.e-order-steps
-  %li.cart.active
+  %li.cart{ class: ('active' if active_steps.include?('cart')) }
     = t('cart')
     (
     %span.cart-items-counter= @cart.total_quantity
     )
-  %li.delivery
+  %li.delivery{ class: ('active' if active_steps.include?('delivery')) }
     = t('views.pages.delivery')
     %span.help= t('chouse_delivery')
-  %li.authentification
+  %li.authentification{ class: ('active' if active_steps.include?('authentification')) }
     = t('authentication')
     %span.help= t('authentication_help_info')
-  %li.payment= t('views.pages.payment')
+  %li.payment{ class: ('active' if active_steps.include?('payment')) }
+    = t('views.pages.payment')
