--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -25,5 +25,9 @@
       %p= t('cart_total_amount')
       %p.cart-total-amount{ data: { total: @cart.total_amount } }
         = t('views.product.with_currency', coust: @cart.total_amount)
-      = form_for @cart.build_order, html: { class: 'form checkout' } do |f|
-        = f.submit t('checkout'), class: 'btn btn-pink'
+      .b-order-checkout
+        - if @cart.order && @cart.order.started?
+          = link_to t('continue_make_order'), [@cart.order_step, @cart.order], class: 'btn btn-pink'
+        - else
+          = form_for @cart.build_order, html: { class: 'form checkout' } do |f|
+            = f.submit t('checkout'), class: 'btn btn-pink'
