--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -10,6 +10,7 @@
 @import "base/variables";
 @import "base/helpers";
 @import "base/theme";
+@import "base/tables";
 
 @import "global/search_bar";
 @import "global/user_widget";
