--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -1,6 +1,7 @@
 // VARS
 $btnBorderRadius     : 7px;
 $inputsWidth         : 270px;
+$dropDownMenuWidth   : 270px;
 $bigInputsWidth      : 466px;
 $middleInputsWidth   : 380px;
 $containerWidth      : 1168px;
@@ -36,3 +37,5 @@ $dustyBlue             : #d0e3f1;
 $paleBlue              : #c8c8c9;
 
 $btnBorderColor        : #898989;
+
+$base-font-size: 14px;
