--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -27,6 +27,7 @@
 
 @import "elements/order_steps";
 @import "elements/images";
+@import "elements/dropdown_submenu";
 
 @import "blocks/product/single_product";
 @import "blocks/product/retable_with_reviews";
