--- a/app/views/shared/_banner.html.haml
+++ b/app/views/shared/_banner.html.haml
@@ -1,6 +1,6 @@
 .banner
   = link_to '', [:sale, :product_categories], class: 'full-block-link'
-  = image_tag 'banner.jpg'
+  = image_tag 'application/banner.png'
 
   .sale
     = link_to t('sale'), [:sale, :product_categories]
