--- a/app/assets/stylesheets/application/global/footer.css.scss
+++ b/app/assets/stylesheets/application/global/footer.css.scss
@@ -1,3 +1,5 @@
+$b-our-products-width: 250px;
+
 footer {
   position: absolute;
   bottom: 0;
@@ -17,15 +19,29 @@ footer {
 
   .our-products {
     li {
-      max-width: 160px;
-      min-height: 98px;
-      margin-right: 40px;
-      margin-left: 0;
+      width: $b-our-products-width;
+      margin: 0 40px 0 0;
       padding-top: 10px;
-      font-size: 16px;
+      font-size: $base-font-size + 2;
 
       &:nth-last-child {
         margin-right: 0;
+      }
+
+      a {
+        @include ellipsis;
+        &.b-product-category-parent-link {
+          width: $b-our-products-width;
+          @include inline-block;
+        }
+        &.b-link-with-child {
+          width: $b-our-products-width - 20px;
+        }
+      }
+      &.with-children ul {
+        li {
+          display: block;
+        }
       }
     }
   }
@@ -37,7 +53,7 @@ footer {
       li a { font-size: 22px; }
 
       .help-block {
-        font-size: 16px;
+        font-size: $base-font-size + 2;
 
         p { margin: 4px 0; }
       }
@@ -48,7 +64,7 @@ footer {
 
       li {
         min-height: 60px;
-        width: 50%;
+        width: 49%;
         margin: 0;
       }
     }
