--- a/app/views/shared/_banner.html.haml
+++ b/app/views/shared/_banner.html.haml
@@ -1,5 +1,7 @@
 .banner
-  = link_to '', [:sale, :product_categories], class: 'full-block-link'
+  = # TODO: REMOVE me after holidays and when will being availible admin for edit banners
+  =# link_to '', [:sale, :product_categories], class: 'full-block-link'
+  = link_to '', '/products/naushniki-zik-parrot-by-philippe-starck-rozovoe-zoloto-v-1-0', class: 'full-block-link'
   = image_tag 'application/banner.png'
 
   .sale
