setting for yandex cashbox production mode, fix footer styles

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -33,9 +33,11 @@
             .help-block
               %p= @settings[:shop_phone]
               %p.pink= "#{ @settings[:shop_work_start] } - #{ @settings[:shop_work_end] }"
-          %li= link_to @news.title, @news if @news
-          %li.pull-right= link_to @useful_information.title, @useful_information if @useful_information
-      .pull-left.right-block
+          - if @news
+            %li= link_to @news.title, @news
+          - if @useful_information
+            %li.pull-right= link_to @useful_information.title, @useful_information
+      .pull-right
         .gray-block
           %h2
             Удобство и безопасность
