--- a/app/views/shared/includes/_static_pages_links.html.haml
+++ b/app/views/shared/includes/_static_pages_links.html.haml
@@ -7,12 +7,12 @@
     page_path(:delivery),
     class: active_class_for_page(params, 'delivery')
   .help-block
-    - @settings[:delivery_cities].split(',').each do |city|
+    - split_by_divider(@settings[:delivery_cities], ',').each do |city|
       %p= city
 %li
   = link_to I18n.t('views.pages.help'),
     page_path(:help),
     class: active_class_for_page(params, 'help')
   .help-block
-    %p.light-blue Безопасность
-    %p.light-blue Возврат денег
+    %p.light-blue= t 'safety'
+    %p.light-blue= t 'refund_of_money'
