a lot of fixes and enhancements

--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -44,6 +44,7 @@
 @import "blocks/user_profile";
 @import "blocks/user_watched";
 @import "blocks/page";
+@import "blocks/brand";
 
 @import "blocks/cart";
 @import "blocks/order/main";
