--- a/app/views/brands/show.html.haml
+++ b/app/views/brands/show.html.haml
@@ -1,5 +1,7 @@
 .b-brand
   %h3= resource.title
+  .b-brand-site-link
+    = link_to resource.site_link, resource.site_link, target: :_blank
   .description
     = resource.description.html_safe
 
