fix some bugs, add specs for front presenter

--- a/app/assets/stylesheets/application/base/helpers.css.scss
+++ b/app/assets/stylesheets/application/base/helpers.css.scss
@@ -27,6 +27,14 @@ ul.menu {
     p {
       margin: 0;
     }
+    a {
+      &.light-blue {
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
   }
 }
 
