--- a/app/assets/stylesheets/application/global/footer.css.scss
+++ b/app/assets/stylesheets/application/global/footer.css.scss
@@ -60,6 +60,7 @@ footer {
         font-size: $base-font-size + 2;
 
         p { margin: 4px 0; }
+        a { font-size: $base-font-size + 2; }
       }
     }
 
