--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,17 +6,17 @@
       %ul.menu.product-category-dropdown-menu{ aria: { labelledby: 'dropdownMenu' } }
         = build_product_category_ancestry_tree(@front_presenter.product_categories_with_photos, { with_image: true })
 
-  - if @front_presenter.news_category || @front_presenter.useful_information_category
+  - if @front_presenter.show_post_categories?
     %hr
     .b-news.main-page
-      - if @front_presenter.news_category
+      - if @front_presenter.show_news?
         .b-news-one.margin-right
           %h3.blue
             = link_to @front_presenter.news_category.title, @front_presenter.news_category
           %ul
             = render partial: 'posts/includes/main_news_list', collection: @front_presenter.news_category.with_posts.limit(3), as: :post
 
-      - if @front_presenter.useful_information_category
+      - if @front_presenter.show_useful_information?
         .b-news-one
           %h3.blue
             = link_to @front_presenter.useful_information_category.title, @front_presenter.useful_information_category
