--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -26,6 +26,7 @@
           %p.dark-pink= "#{ @settings[:shop_work_start] } - #{ @settings[:shop_work_end] }"
       %li= link_to t('brands'), [:brands]
       = render 'shared/includes/static_pages_links'
+  = render 'shared/user_widget'
 
 .container
   = render 'shared/search_bar'
