--- a/app/assets/stylesheets/application/global/footer.css.scss
+++ b/app/assets/stylesheets/application/global/footer.css.scss
@@ -55,13 +55,6 @@ footer {
 
     ul.menu {
       li a { font-size: 20px; }
-
-      .help-block {
-        font-size: $base-font-size + 2;
-
-        p { margin: 4px 0; }
-        a { font-size: $base-font-size + 2; }
-      }
     }
 
     .left-menu {
@@ -77,9 +70,18 @@ footer {
     .right-menu {
       padding-bottom: 25px;
 
-      li {
+      & > li {
         margin: 0 30px 0 0;
         &:nth-last-child { margin: 0; }
+      }
+    }
+
+    .help-block {
+      ul {
+        font-size: $base-font-size + 2;
+        li {
+          a { font-size: $base-font-size + 2; }
+        }
       }
     }
   }
