--- a/app/assets/stylesheets/application/global/header.css.scss
+++ b/app/assets/stylesheets/application/global/header.css.scss
@@ -29,15 +29,18 @@ header {
 
   ul.menu {
     font-size: $base-font-size + 2;
-    li {
+    & > li {
       margin: 0 10px;
     }
   }
+}
 
-  .help-block {
-    padding-top: 2px;
-    font-size: 11px;
-    line-height: 14px;
+.help-block {
+  padding-top: 2px;
+  font-size: 11px;
+  line-height: 14px;
+  &.delivery {
+    max-width: 130px;
   }
 }
 
