--- a/app/views/orders/includes/_line_item.html.haml
+++ b/app/views/orders/includes/_line_item.html.haml
@@ -5,4 +5,4 @@
       .e-image.related{ style: "background-image: url(#{ photo.file_url(:product, :related) })" }
   %td= link_to line_item.product_title, line_item.product
   %td= line_item.quantity
-  %td= t('views.product.with_currency', coust: line_item.calculated_total_amount )
+  %td= t('views.product.with_currency', coust: price_formatted(line_item.calculated_total_amount) )
