--- a/app/views/products/includes/_single_product.html.haml
+++ b/app/views/products/includes/_single_product.html.haml
@@ -6,7 +6,7 @@
     .e-image{ style: "background-image: url(#{ photo.file_url(:product, main_class.to_sym) })" }
   .b-info
     %p.title= link_to product.title, product
-    %p.price= I18n.t('views.product.with_currency', coust: product.price_with_discount)
+    %p.price= I18n.t('views.product.with_currency', coust: price_formatted(product.price_with_discount))
     .b-product-ratable-with-reviews.smal
       .ratable.read_only{ data: { score: product.average_score } }
       = link_to t('views.product.reviews_count', count: product.published_reviews_count), product_path(product, anchor: 'reviews'), class: 'reviews-count'
