add jivosite and transfer some libraries to the bower

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,4 +37,6 @@
     = render 'shared/footer'
 
     = javascript_include_tag "application"
-    = render 'shared/metrics' if Rails.env.production?
+    - if Rails.env.production?
+      = render 'shared/metrics'
+      = render 'shared/includes/jivosite'
