--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 /*
   *= require_self
   *= require gray.min
-  *= require select2
+  *= require select2/select2
   *= require ./application/main
 */
