payments success and fail page

--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -46,6 +46,7 @@
 @import blocks/user_watched
 @import blocks/page
 @import blocks/brand
+@import blocks/payments
 
 @import blocks/cart
 @import blocks/order/main
