--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -13,7 +13,11 @@
 @import bootstrap-sass/assets/stylesheets/bootstrap/dropdowns
 @import bootstrap-sass/assets/stylesheets/bootstrap/tables
 @import bootstrap-sass/assets/stylesheets/bootstrap/type
+@import bootstrap-sass/assets/stylesheets/bootstrap/forms
 @import bootstrap-sass/assets/stylesheets/bootstrap/navs
+@import bootstrap-sass/assets/stylesheets/bootstrap/navbar
+@import bootstrap-sass/assets/stylesheets/bootstrap/panels
+@import bootstrap-sass/assets/stylesheets/bootstrap/component-animations
 
 @import base/variables
 @import base/helpers
